# fastapi_technology_preview-1

./: .gitignore  README.md  pyproject.toml
backend/app/models/: file.py
backend/app/tests/: test_main.py
environment/: prepare_vm.py  pxelinux.cfg
environment/docker/: app.yml  mongodb-cluster.yml  mongodb.yml
environment/docker/mongodb/scripts/: init_replicaset.js
environment/kickstart/: fedora-ks.cfg
